@@ -1055,6 +1055,28 @@ static void on_sync_activate(GtkMenuItem * menuitem, TEXT_DATA * t)
 }
 
 
+/******************************************************************************
+ * Name
+ *  on_about_module_activate
+ *
+ * Synopsis
+ *   #include "gui/bibletext_menu.h"
+ *
+ *  void on_about_module_activate(GtkMenuItem * menuitem, 
+						TEXT_DATA * vt)	
+ *
+ * Description
+ *   
+ *
+ * Return value
+ *   void
+ */
+
+static void on_about_module_activate(GtkMenuItem * menuitem, TEXT_DATA * t)
+{
+	gui_display_about_module_dialog(t->mod_name, FALSE);
+}
+
 
 void
 on_menu_deactivate(GtkMenuShell * menushell, TEXT_DATA * t)
@@ -1118,6 +1140,7 @@ GtkWidget *gui_create_pm_text(TEXT_DATA * t)
 	GtkWidget *pm_text;
 //	GtkAccelGroup *pm_text_accels;
 //	GtkWidget *shortcut;
+	GtkWidget *about_module;
 	GtkWidget *separator;
 	GtkWidget *file;
 	GtkWidget *file_menu;
@@ -1147,6 +1170,7 @@ GtkWidget *gui_create_pm_text(TEXT_DATA * t)
 	GtkWidget *parallel_page;
 	GtkWidget *add_module_key = NULL;
 	gchar buf[256];
+	GString *str;
 	GtkTooltips *tooltips;
 
 	sprintf(buf, "%s %s %s", _("Open"), t->mod_name,
@@ -1158,7 +1182,20 @@ GtkWidget *gui_create_pm_text(TEXT_DATA * t)
 	gtk_object_set_data(GTK_OBJECT(pm_text), "pm_text", pm_text);
 	/*pm_text_accels =
 	    gtk_menu_ensure_uline_accel_group(GTK_MENU(pm_text));*/
-	    
+	str = g_string_new(NULL);
+	g_string_printf(str,"%s %s",_("About"),t->mod_name);
+	about_module =
+	    gtk_menu_item_new_with_label(str->str);
+	gtk_widget_show(about_module);
+	gtk_container_add(GTK_CONTAINER(pm_text),
+				  about_module);
+	g_string_free(str,TRUE);
+	
+	separator = gtk_menu_item_new();
+	gtk_widget_show(separator);
+	gtk_container_add(GTK_CONTAINER(pm_text), separator);
+	gtk_widget_set_sensitive(separator, FALSE);
+	
 	/*
 	 * file menu
 	 */
@@ -1412,6 +1449,10 @@ GtkWidget *gui_create_pm_text(TEXT_DATA * t)
 			   G_CALLBACK
 			   (on_same_lookup_selection_activate), t);
 
+	gtk_signal_connect(GTK_OBJECT(about_module), "activate",
+			   G_CALLBACK
+			   (on_about_module_activate), t);
+	
 	gtk_signal_connect(GTK_OBJECT(copy), "activate",
 			   G_CALLBACK(on_copy_activate), t);
 	gtk_signal_connect(GTK_OBJECT(print), "activate",
